[package]
name = "azure_file_upload_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
dotenv = "0.15.0"
futures = "0.3.30"
native-dialog = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
